# diavgeia-api

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: lint.yml
diavgeia_api/: __init__.py  _config.py  client.py  exceptions.py  utils.py
diavgeia_api/models/: __init__.py  decisions.py  dictionaries.py  organizations.py  search.py  types.py
examples/: search.ipynb  target_a_decision_and_learn_more.ipynb  target_an_organization_and_find_its_decisions.ipynb
tests/: conftest.py  utils.py
tests/client/: test_client.py
tests/decisions/: conftest.py  test_decisions.py
tests/decisions/fixtures/: one_decisions_details.json  one_decisions_version_log.json
tests/dictionaries/: conftest.py  test_live.py  test_parsing.py
tests/dictionaries/fixtures/: FEKTYPES.json  dictionaries_list.json
tests/organizations/: conftest.py  test_organizations.py
tests/organizations/fixtures/: an_org.json  an_orgs_positions.json  an_orgs_signers.json  an_orgs_units.json  organizations_active.json  organizations_inactive_ministry.json  organizations_of_ministry.json  signer_without_poisitionid.json  specific_signer.json
tests/search/: conftest.py  test_search.py
tests/search/fixtures/: complex_search_result.json  simple_query_search_result.json
tests/types/: conftest.py  test_types.py
tests/types/fixtures/: all_types.json  details_of_2_4_6_1_type.json  details_of_b_6_type.json
