[tool.poetry]
name = "diavgeia-api"
version = "0.0.3"
description = "Python wrapper for the Diavgeia Open Data API"
authors = ["Konstantinos Voulgaropoulos <voulkon93@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "diavgeia_api" }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pydantic = "^2.7.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-lazy-fixtures = "^1.1.2"
responses = "^0.24"
black = "^24.0"
isort = "^5.13"
mypy = "^1.10"
vcrpy = "^6.0"
pytest-cov = "^5.0"

[tool.ruff]
# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv", 
    "env",
    "build",
    "dist",
    "__pycache__",
]
# Target Python versions
target-version = "py311"
line-length = 127

[tool.poetry.extras]
dev = ["pytest", "pytest-lazy-fixtures", "responses", "black", "isort", "mypy", "vcrpy", "pytest-cov"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
